--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 
     max-width: 1280px ;
 
-    background-image: url(img/img-principal/Group\ 16.png);
+    background-image: url(../img/img-principal/Group\ 16.png);
 
     background-repeat: no-repeat;
 
