--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ body{
 
 /* Botão avançar */
 
-#questions .avancar{
+#questions #verificar, #avancar {
 
     width: 150px;
     height: 50px;
@@ -142,7 +142,7 @@ body{
 }
 
 
-#questions .avancar:hover{
+#questions #verificar:hover, #avancar:hover{
 
     cursor: pointer;
     scale: 1.05;
